# auto-ml-validation

./: .gitignore  README.md  app.py  main.ipynb  pyproject.toml  report.docx
auto_ml_validation/: app.py  process_data.py  report.docx  train.py  train_pipeline.py  utils.py
auto_ml_validation/algorithms/: base_binary_classifier.py  decision_tree.py  knn.py  logistic_regression.py  random_forest.py  support_vector_machine.py  xgboost.py
auto_ml_validation/app/: header.py  index.py
auto_ml_validation/application/: app.py
auto_ml_validation/evaluation/: Veritastool_Package.ipynb  fairness_metrics_evaluator.py  performance_evaluator  performance_metrics_evaluator.py  statistical_metrics_evaluator.py
auto_ml_validation/feature_selection/: feat_selection.py
auto_ml_validation/validation_package/: benchmark_pipeline.py  evaluation_pipeline.py  main.py  model_pipeline.py  predict_pos_proba.py  process_data.py  report_generation.py  train_pipeline.py  (+1 more)
models/: Tianyi_testing_rf_rep_2023-04-09.pkl  _auto_2023-04-03.pkl  _auto_2023-04-04.pkl  _auto_2023-04-08.pkl  _auto_2023-04-09.pkl  _logistic_2023-03-31.pkl  _rf_2023-03-27.pkl  a_auto_2023-04-07.pkl  a_rf_rep_2023-04-08.pkl  ha_auto_2023-04-03.pkl  lr.pkl  test2_auto_2023-04-03.pkl  test3_auto_2023-04-03.pkl  test_auto_2023-04-02.pkl  test_auto_2023-04-03.pkl  test_auto_2023-04-05.pkl  test_bc2_auto_2023-04-10.pkl  test_bc2_rf_rep_2023-04-11.pkl  test_bc2_xgboost_rep_2023-04-10.pkl  testetest_auto_2023-04-07.pkl  testing_logistic_rep_2023-04-09.pkl
outputs/: test_bc2_2023-04-11_report.docx  test_bc2_report.docx
(+64 files in other folders)
