[tool.poetry]
name = "auto-ml-validation"
version = "0.1.0"
description = ""
authors = ["keiraaa-xrq <fantasy9923@gmail.com>"]
readme = "README.md"
packages = [{include = "auto_ml_validation"}]

[tool.poetry.dependencies]
python = ">=3.9,<3.11"
pandas = "^1.5.3"
numpy = "^1.24.2"
scikit-learn = "^1.2.1"
imbalanced-learn = "^0.10.1"
xgboost = "^1.7.3"
plotly = "^5.13.0"
dash = "^2.8.1"
click = "^8.1.3"
mlxtend = "^0.21.0"
dash-bootstrap-components = "^1.3.1"
joblib = "^1.2.0"
matplotlib = "^3.7.1"
notebook = "^6.5.3"
lime = "^0.2.0.1"


[tool.poetry.group.dev.dependencies]
autopep8 = "^2.0.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
