[tool.poetry]
name = "auto-ml-validation"
version = "0.1.0"
description = ""
authors = ["keiraaa-xrq <fantasy9923@gmail.com>"]
readme = "README.md"
packages = [{include = "auto_ml_validation"}]

[tool.poetry.dependencies]
python = ">=3.9,<=3.9.5"
pandas = "1.3.2"
numpy = "1.21.2"
scikit-learn = "0.24.2"
veritastool = "^1.1.0"


[tool.poetry.group.dev.dependencies]
autopep8 = "^2.0.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
